# librgb

./: .gitignore  .travis.sh  .travis.yml  CMakeLists.txt  README.md  main.cpp  travis.sh
librgb/: CMakeLists.txt  Effect.h  FadeEffect.h  RGBColor.h  RGBEffect.cpp  RGBPixel.cpp  RGBPixel.h  arduino-emulation.h
src/: CMakeLists.txt  ColorFader
src/librgb/: CMakeLists.txt  Effect.h  FadeEffect.h  RGBColor.cpp  RGBColor.h  arduino-emulation.h
test/: CMakeLists.txt
test/src/: CMakeLists.txt  FadeEffect_test.cpp  RGBColor_test.cpp  fade_test.cpp  macros_color_test.h  rgb_color_test.cpp  rgb_pixel_test.cpp  test_macros.h
